3rd corrected version
git-svn-id: svn+ssh://svn.cern.ch/reps/totem/trunk/user/jkaspar/publications@5710 4525493e-7705-40b1-a816-d608a930855b

--- a/2010/thesis/alignment.tex
+++ b/2010/thesis/alignment.tex
@@ -1143,7 +1143,7 @@ For further analyses we have used the final constraints, where the far-near rota
 %overlap=f
 }
 
-\fig{fig/pdf/al_comp_rp_all_rot.pdf}{al comp rp all rot}{\abb{DP} alignment comparison for the 56-220-far unit (with the final constraints.) The order of points is the same as in \Tb{al lhc datasets} (top-down direction in both cases). The circles correspond to the analyses with all tracks, the squares with overlap tracks only. For certain data sets the latter type of analyses have not yielded reasonable results (too little data), which have thus not been drawn. The vertical dashed lines mark the mean misalignments.
+\fig{fig/pdf/al_comp_rp_all_rot.pdf}{al comp rp all rot}{\abb{DP} alignment comparison for the 56-220-far unit (with the final constraints). The order of points is the same as in \Tb{al lhc datasets} (top-down direction in both cases). The circles correspond to the analyses with all tracks, the squares to the analyses with overlap tracks only. For certain data sets the latter type of analyses has not yielded reasonable results (too little data) -- these results have thus not been drawn. The vertical dashed lines mark the mean misalignments.
 }
 
 Let us investigate the stability a bit deeper. Since a comparison for all sensors would require too much space, we have decided to compare only the \abb{DP} alignments calculated according to \Eq{al dp rotz,al dp shr}. These are the misalignments shared by all sensors of a given \abb{DP}. A comparison for 56-220-far unit can be found in \Fg{al comp rp all rot}. There are two types of points representing two types of analyses. Circles are used for alignment with all tracks (\pmt{requireOverlap} = False), squares for alignment with overlap tracks only (\pmt{requireOverlap} = True). There have been several reasons to do so. First, the overlap requirement selects a subsample from all the tracks. As we have said, this is a way to check for presence of pathological events that might bias the alignment results. Furthermore, the overlap tracks have a rather different distribution of the rotation $\ga$ factors (see \Tb{al alignment quantities}). Therefore, this is also a test of the stability of the rotation determination. Looking at the results, one finds both types of analyses compatible -- this suggests that the results are robust.
