--- a/2010/thesis/defense.tex
+++ b/2010/thesis/defense.tex
@@ -231,7 +231,7 @@ $$Z(t) = {|F^{\rm C+H}(t)|^2 - |F^{\rm C}(t)|^2 - |F^{\rm H}(t)|^2\over |F^{\rm 
 \>> SWY reliable only for small $|t|$
 \>> differences between CKL and ``this thesis'' less pronounced (only $1\%$ difference at the peak at $|t| \approx 0.5\un{GeV^2}$)
 \>> suppression understood -- interference can only be important if $|F^{\rm C}| \approx |F^{\rm H}|$:
-$$\d\si/\d t \propto |F^{\rm C} + F^{\rm H} \e^{\i \al \Psi(t)}|^2$$
+$$\d\si/\d t \propto |F^{\rm C} + F^{\rm H} \e^{\i \al \Ps(t)}|^2$$
 }}
 
 \line{\fig*[4.5cm]{fig/pdf/el_mod_Z_slides.pdf}\hss\raise30mm\vtop{\hsize10cm
