--- a/2010/thesis/thesis.tex
+++ b/2010/thesis/thesis.tex
@@ -23,7 +23,7 @@
 %	\def\FootText{(VERSION 15)}
 %\fi
 
-\ShowLabelstrue
+%\ShowLabelstrue
 
 % this leads to 2cm margins at top, bottom and outer edges, 3cm margins at the inner edge
 \pageamp=5mm
@@ -116,7 +116,8 @@ I understand that my work relates to the rights and obligations under the Act No
 
 %In Geneva, 25 November, 2011 (submitted version)
 %In Geneva, 8 December, 2011 (1st corrected version)
-In Geneva, 8 February, 2012 (2nd corrected version)
+%In Geneva, 8 February, 2012 (2nd corrected version)
+In Geneva, 16 April, 2012 (3rd corrected version)
 
 \vskip2\baselineskip
 \line{\hss Jan Ka\v spar}
@@ -221,7 +222,7 @@ software parameter  & \pmt{parameter}		& typewriter\cr\ln
 \ListAbb{ALICE}{A Large Ion Collider Experiment}{An LHC experiment.}
 \ListAbb{ALFA}{Absolute Luminosity For Atlas}{The very forward tracker system of the ATLAS detector.}
 \ListAbb{ATLAS}{A Toroidal LHC Apparatus}{An LHC experiment.}
-\ListAbb{BFKL}{Balitsky-Fadin-Kuraev-Lipatov}{Resumation of gluon ladders leading to a ``hard pomeron'', see e.g.~Ch.~8 in \bref{barone}.}
+\ListAbb{BFKL}{Balitsky-Fadin-Kuraev-Lipatov}{Resummation of gluon ladders leading to a ``hard pomeron'', see e.g.~Ch.~8 in \bref{barone}.}
 \ListAbb{BLM}{Beam Loss Monitor}{A device to detect beam losses.}
 \ListAbb{BPM}{Beam Position Monitor}{A device to determine the position of the beam.}
 \ListAbb{CDF}{Cumulative Distribution Function}{}
@@ -232,7 +233,7 @@ software parameter  & \pmt{parameter}		& typewriter\cr\ln
 \ListAbb{CMS}{the Compact Muon Solenoid}{An LHC experiment.}
 \ListAbb{CSC}{Cathode Strip Chamber}{A type of gaseous particle detectors, see \Sc{ttm det}.}
 \ListAbb{CTS}{Current Terminating Structure}{A ring structure along the active of edge of the TOTEM silicon sensors, see \Sc{ttm det}.}
-\ListAbb{DAQ}{Data AcQusition}{A system to collect data from detectors and save them in a computer storage.}
+\ListAbb{DAQ}{Data AcQuisition}{A system to collect data from detectors and save them in a computer storage.}
 \ListAbb{DIGI}{DIGItal}{A format of data as received from the VFAT chips, i.e.~one boolean value (hit/no hit) per detector channel.}
 \ListAbb{DP}{Detector Package}{A package of ten hybrids with silicon detectors, see \Sc{ttm det}.}
 \ListAbb{DPE}{Double Pomeron Exchange}{A class of diffractive processes, see \Fg{ttm processes}.}
@@ -256,9 +257,9 @@ software parameter  & \pmt{parameter}		& typewriter\cr\ln
 \ListAbb{QFT}{Quantum Field Theory}{}
 \ListAbb{QCD}{Quantum ChromoDynamics}{}
 \ListAbb{QM}{Quantum Mechanics}{}
-\ListAbb{RECO}{RECOnstruced}{A format of data consisting of coordinate specifications of every reconstructed hit cluster.}
+\ListAbb{RECO}{RECOnstructed}{A format of data consisting of coordinate specifications of every reconstructed hit cluster.}
 \ListAbb{RMS}{Root Mean Square}{}
-\ListAbb{RP}{Roman Pot}{A a pot-shaped movable beam-pipe insertion with detectors. A system of Roman Pots is one sub-detector of the TOTEM experiment, see \Sc{ttm det}.}
+\ListAbb{RP}{Roman Pot}{A pot-shaped movable beam-pipe insertion with detectors. A system of Roman Pots is one sub-detector of the TOTEM experiment, see \Sc{ttm det}.}
 \ListAbb{SD}{Single Diffraction}{A class of diffractive processes, see \Fg{ttm processes}.}
 \ListAbb{SWY}{Simplified West-Yennie}{Refers to the Coulomb-interference formula Eq.~\ref{el phase SWY}.}
 \ListAbb{T1}{Telescope 1}{A sub-detector of the TOTEM experiment, see \Sc{ttm det}.}
