--- a/2010/thesis/totem.tex
+++ b/2010/thesis/totem.tex
@@ -223,9 +223,9 @@ One of the main items on the physics programme of \abb{TOTEM} is the measurement
 
 \abb{TOTEM} plans to use the luminosity-independent method. This method avoids using any luminosity measurement, which is usually subject to a large uncertainty. Instead, the method exploits the optical theorem. If one takes its ``spin-less'' approximation \Eq{el spinless si} and combines it with the definition of luminosity $N = {\cal L} \si$ (relating an event rate $N$ to the corresponding cross section $\si$) and with the decomposition of the total cross section to the elastic and inelastic part $\si_{\rm tot} = \si_{\rm el} + \si_{\rm inel}$, one obtains:
 \eqref{
-	\si_{\rm tot} = {1\over 1+\rh^2} {\d N_{\rm el}/\d t|_{t=0}\over N_{\rm el} + N_{\rm inel}}
+	\si_{\rm tot} = {16\pi\over 1+\rh^2}\, {\d N_{\rm el}/\d t|_{t=0}\over N_{\rm el} + N_{\rm inel}}
 	\ ,\qquad
-	{\cal L} = (1+\rh^2) {(N_{\rm el} + N_{\rm inel})^2\over \d N_{\rm el}/\d t|_{t=0} }\ .
+	{\cal L} = {1+\rh^2\over 16\pi}\, {(N_{\rm el} + N_{\rm inel})^2\over \d N_{\rm el}/\d t|_{t=0} }\ .
 }{ttm li meth}
 Here, $\rh = \Re F(0) / \Im F(0)$ (cf.~\Eq{el rh}), i.e.~it gives the ratio of the real to the imaginary part of the elastic scattering amplitude $F$ at $t = 0\un{GeV^2}$.
 
