--- a/2012/3papers/elastic/elastic.tex
+++ b/2012/3papers/elastic/elastic.tex
@@ -53,8 +53,24 @@ TODO: The measurement is performed with the vertical RPs in $220\un{m}$ stations
 
 \subsection{Optics}
 
+Proton transport for $\beta^* = 90\un{m}$ optics
+
+\begin{equation}
+\label{transport}
+x^{\rm N} = L_x\,\theta^*_x + v_x\,x^*\ ,\ 
+x^{\rm F} = v_x\,x^*\ ,\ 
+y = L_y\,\theta^*_y + v_y\,y^*
+\end{equation}
+
+
 TODO: brief description of optics, refer to \cite{epl96} where details are discussed
 
+\begin{equation}
+\label{reconstruction}
+x^* = {x^{\rm F}\over v_x}\ ,\quad
+\theta^*_x = {1\over {\d L_x\over \d s}} \left( \theta_x - {\d v_x\over \d s} x^* \right)\ ,\quad
+\theta^*_y = {y\over L_y}\ .
+\end{equation}
 
 %--------------------------------------------------
 \section{Data taking}
@@ -90,7 +106,9 @@ The analysis is very similar the one of \cite{epl96}. Before we describe all the
 %-------------------------
 \subsection{Alignment}
 
-Three complementary methods were applied. First, the RP motor control was calibrated by a beam-touching exercise. Then, proton tracks passing through the overlap between vertical and horizontal RPs were used to determine the relative alignment among the RPs of each unit. Since the elastic event tagging does not require precise alignment, we could use an elastic pre-selection for alignment fine-tuning. By exploiting the azimuthal symmetry of elastic scattering and taking advantage of the very small effective length $L_x$, we could adjust the horizontal and vertical shifts and the tilt of each unit. TODO: residual uncertainties?
+Three complementary methods were applied. First, the RP motor control was calibrated by a beam-touching exercise. Then, proton tracks passing through the overlap between vertical and horizontal RPs were used to determine the relative alignment among the RPs of each unit. Since the elastic event tagging does not require precise alignment, we could use an elastic pre-selection for alignment fine-tuning. By exploiting the azimuthal symmetry of elastic scattering and taking advantage of the very small effective length $L_x$, we could adjust the horizontal and vertical shifts and the tilt of each unit.
+
+TODO: residual uncertainties -- effect on $\d\sigma/\d t$ smaller than $0.3\%$
 
 %-------------------------
 \subsection{Elastic tagging}
@@ -117,15 +135,9 @@ The cuts used to select the elastic events are summarized in Tab.~\ref{cuts}. Th
 %-------------------------
 \subsection{Kinematics reconstruction}
 
-The scattering angles were reconstructed as in \cite{epl96} -- vertical angle ($\theta^*_y$) from hit position ($y$) and horizontal angle ($\theta^*_x$) from local track angle at a station:
-\begin{equation}
-\label{reconstruction}
-\theta^*_y = {y\over L_y}\ ,\qquad
-\theta^*_x = {1\over {\d L_x\over \d s}} \left( \theta_x - {\d v_x\over \d s} x^* \right)\ .
-\end{equation}
-This is the way that minimizes the influence of optics perturbations (TODO: reference).
+The scattering angles were reconstructed according to Eq.~\ref{reconstruction}.
 
-TODO: Mention the optics uncertainties? Relevant for systematics evaluation.
+TODO: Optics uncertainties (one arm) $0.4\%$ and $1.3\%$ for $\theta^*_y$ and $\theta^*_x$. The latter one has more pronounced effect on $\d\sigma/\d t$ (higher value, no acceptance cut in $\theta_x$) and is the leading systematic effect for larger $|t|$ values.
 
 
 %-------------------------
@@ -138,10 +150,14 @@ The background contribution (i.e. all non-elastic events passing the selection c
 
 There were two acceptance limitations: the detector edge (relevant for lower $|t|$) and the LHC aperture limitation shown in Fig.~\ref{hit dist} right (relevant for higher $|t|$). Both limitations were treated by assuming azimuthal symmetry and by correcting for smearing around the limitation edges.
 
+TODO: correction no larger than 15 (with one diagonal -- 7.5 for two).
+
 %-------------------------
 \subsection{Unfolding of resolution effects}
 
 The angular resolution was determined by comparing the scattering angles reconstructed from the left and right arm. Combining all three datasets and all diagonals yields one-arm resolutions $(6.36\pm 0.21)\un{\mu rad}$ in $\theta^*_x$ and $(2.47\pm 0.07)\un{\mu rad}$ in $\theta^*_y$. The latter one is predominantly given by the beam-divergence, the $\theta^*_x$ resolution is deteriorated by a contribution from the finite detector pitch. The resolution impact on the $t$-distribution was determined (and removed) by an iterative procedure. That starts by taking the observed (smeared) $t$-distribution as an input to a Monte-Carlo calculation of the smearing correction. The correction is applied to the observed $t$-distribution which yields a better estimate of the true $t$-distribution. In total, three iterations were made.
+
+TODO: systematics (from the uncertainy of resolution) $< 0.5\%$
 
 %-------------------------
 \subsection{Efficiencies}
@@ -201,9 +217,7 @@ The Monte-Carlo simulation confirms that there is a strong correlation between t
 
 TODO: very good agreement among datasets and diagonals
 
-Shown in Fig.~\ref{dsdt}, data presented in Tab.~\ref{data low t} and in Tab.~\ref{data medium t}.
-
-TODO: how the bin control points were calculated -- why there is no $t$ error in Tab.~\ref{data low t}
+Shown in Fig.~\ref{dsdt}, data presented in Tab.~\ref{data low t} and in Tab.~\ref{data medium t}. Each bin $B_i$ of width $w_i$ is represented by $t_i$ value calculated to the requirement $f(t_i) = {1\over w_i} \int_{B_i} f(\tau)\, \d\tau$ (see \cite{lafferty94}), where $f(t)$ stands for the $t$-distribution. The uncertainty of this representative $t$ values comes from the uncertainty of the $f(t)$ determination. Even considering both statistical (bin fluctuations) and systematic (different fit parameterizations) gives negligible uncertainties on the representative $t$-values -- the relative uncertainties are smaller than $2\cdot10^{-5}$ for Tab.~\ref{data low t} and $3\cdot10^{-3}$ for Tab.~\ref{data medium t}).
 
 %\begin{figure*}
 %\begin{center}
@@ -215,7 +229,7 @@ TODO: how the bin control points were calculated -- why there is no $t$ error in
 
 
 \begin{table}
-\caption{Low $|t|$ data results, $\beta^* = 90\un{m}$, this analysis. Statistical errors only.}
+\caption{Low $|t|$ data results, $\beta^* = 90\un{m}$, this analysis. Statistical errors only, systematic ones in the top plot of Fig.~\ref{dsdt}.}
 \label{data low t}
 \begin{center}
 \vskip-3mm
@@ -277,53 +291,56 @@ $0.109\S\S$ & $\S58.11 \pm \S0.55$\cr
 \end{table}
 
 \begin{table}
-\caption{Medium $|t|$ data results, $\beta^* = 3.5\un{m}$, Ref.~\cite{epl95}. NOT FINAL - just a place-holder.}
+\caption{Medium $|t|$ data results, $\beta^* = 3.5\un{m}$, Ref.~\cite{epl95}. NOT FINAL - just a place-holder. Statistical $\d\sigma_{\rm el}/\d t$ errors only, systematic uncertainties evaluated for three $|t|$ values: $^{+25}_{-37}\%$ at $|t|=0.4\un{GeV^2}$, $^{+28}_{-39}\%$ at $0.4\un{GeV^2}$ and $^{+27}_{-30}\%$ at $0.4\un{GeV^2}$.}
 \label{data medium t}
 \begin{center}
 \vskip-3mm
-\begin{tabular}{|c|c|c|c|c|c|c|c|}\hline
+\begin{tabular}{|c|c|c|c|c|c|c|c|}
+\multispan2\hrulefill &\omit &\multispan2\hrulefill\cr
 $|t|$ & $\d \sigma_{\rm el}/\d t$ &\omit\ \vrule& $|t|$ & $\d \sigma_{\rm el}/\d t$\cr
-$\unt{GeV^2}$ & $\unt{\mu b/GeV^2}$ &\omit\ \vrule& $\unt{GeV^2}$ & $\unt{\mu b/GeV^2}$\cr\hline
-$ 0.3643 \pm 0.0032 $ & $ 299.2\S \pm 6.9\S $  &\omit\ \vrule& $ 0.8310 \pm 0.0078 $ & $ \S18.93\S\S \pm 0.71\S\S $\cr
-$ 0.3707 \pm 0.0032 $ & $ 251.8\S \pm 5.8\S $  &\omit\ \vrule& $ 0.8467 \pm 0.0079 $ & $ \S18.32\S\S \pm 0.68\S\S $\cr
-$ 0.3773 \pm 0.0033 $ & $ 225.1\S \pm 5.1\S $  &\omit\ \vrule& $ 0.8629 \pm 0.0083 $ & $ \S16.33\S\S \pm 0.62\S\S $\cr
-$ 0.3840 \pm 0.0033 $ & $ 174.3\S \pm 4.2\S $  &\omit\ \vrule& $ 0.8797 \pm 0.0085 $ & $ \S16.42\S\S \pm 0.61\S\S $\cr
-$ 0.3908 \pm 0.0035 $ & $ 157.1\S \pm 3.8\S $  &\omit\ \vrule& $ 0.8966 \pm 0.0084 $ & $ \S16.95\S\S \pm 0.63\S\S $\cr
-$ 0.3978 \pm 0.0035 $ & $ 133.3\S \pm 3.2\S $  &\omit\ \vrule& $ 0.9134 \pm 0.0084 $ & $ \S14.14\S\S \pm 0.56\S\S $\cr
-$ 0.4050 \pm 0.0036 $ & $ 116.1\S \pm 2.9\S $  &\omit\ \vrule& $ 0.9306 \pm 0.0088 $ & $ \S14.05\S\S \pm 0.55\S\S $\cr
-$ 0.4124 \pm 0.0038 $ & $ \S92.6\S \pm 2.4\S $  &\omit\ \vrule& $ 0.9482 \pm 0.0088 $ & $ \S14.10\S\S \pm 0.56\S\S $\cr
-$ 0.4200 \pm 0.0039 $ & $ \S78.1\S \pm 2.1\S $  &\omit\ \vrule& $ 0.9663 \pm 0.0093 $ & $ \S11.91\S\S \pm 0.48\S\S $\cr
-$ 0.4280 \pm 0.0040 $ & $ \S63.2\S \pm 1.7\S $  &\omit\ \vrule& $ 0.9853 \pm 0.0097 $ & $ \S12.24\S\S \pm 0.48\S\S $\cr
-$ 0.4363 \pm 0.0042 $ & $ \S53.6\S \pm 1.5\S $  &\omit\ \vrule& $ 1.0048 \pm 0.0098 $ & $ \S11.31\S\S \pm 0.46\S\S $\cr
-$ 0.4450 \pm 0.0045 $ & $ \S44.7\S \pm 1.3\S $  &\omit\ \vrule& $ 1.0243 \pm 0.0098 $ & $ \S10.04\S\S \pm 0.43\S\S $\cr
-$ 0.4542 \pm 0.0047 $ & $ \S33.7\S \pm 1.1\S $  &\omit\ \vrule& $ 1.044\S \pm 0.010\S $ & $ \S\S8.73\S\S \pm 0.39\S\S $\cr
-$ 0.4639 \pm 0.0050 $ & $ \S30.25 \pm 0.98 $  &\omit\ \vrule& $ 1.065\S \pm 0.011\S $ & $ \S\S7.87\S\S \pm 0.36\S\S $\cr
-$ 0.4742 \pm 0.0053 $ & $ \S25.54 \pm 0.85 $  &\omit\ \vrule& $ 1.086\S \pm 0.011\S $ & $ \S\S8.13\S\S \pm 0.36\S\S $\cr
-$ 0.4849 \pm 0.0054 $ & $ \S21.58 \pm 0.75 $  &\omit\ \vrule& $ 1.109\S \pm 0.011\S $ & $ \S\S7.20\S\S \pm 0.34\S\S $\cr
-$ 0.4960 \pm 0.0057 $ & $ \S19.44 \pm 0.70 $  &\omit\ \vrule& $ 1.131\S \pm 0.012\S $ & $ \S\S6.50\S\S \pm 0.31\S\S $\cr
-$ 0.5077 \pm 0.0060 $ & $ \S18.04 \pm 0.66 $  &\omit\ \vrule& $ 1.155\S \pm 0.012\S $ & $ \S\S5.09\S\S \pm 0.26\S\S $\cr
-$ 0.5201 \pm 0.0065 $ & $ \S17.06 \pm 0.63 $  &\omit\ \vrule& $ 1.180\S \pm 0.013\S $ & $ \S\S5.26\S\S \pm 0.26\S\S $\cr
-$ 0.5332 \pm 0.0066 $ & $ \S16.07 \pm 0.62 $  &\omit\ \vrule& $ 1.206\S \pm 0.013\S $ & $ \S\S4.96\S\S \pm 0.25\S\S $\cr
-$ 0.5465 \pm 0.0067 $ & $ \S16.85 \pm 0.66 $  &\omit\ \vrule& $ 1.233\S \pm 0.014\S $ & $ \S\S4.22\S\S \pm 0.22\S\S $\cr
-$ 0.5601 \pm 0.0069 $ & $ \S18.46 \pm 0.72 $  &\omit\ \vrule& $ 1.261\S \pm 0.015\S $ & $ \S\S3.40\S\S \pm 0.19\S\S $\cr
-$ 0.5739 \pm 0.0068 $ & $ \S18.26 \pm 0.72 $  &\omit\ \vrule& $ 1.291\S \pm 0.015\S $ & $ \S\S3.26\S\S \pm 0.18\S\S $\cr
-$ 0.5877 \pm 0.0070 $ & $ \S20.77 \pm 0.79 $  &\omit\ \vrule& $ 1.322\S \pm 0.016\S $ & $ \S\S2.69\S\S \pm 0.16\S\S $\cr
-$ 0.6016 \pm 0.0070 $ & $ \S22.85 \pm 0.85 $  &\omit\ \vrule& $ 1.355\S \pm 0.017\S $ & $ \S\S2.21\S\S \pm 0.14\S\S $\cr
-$ 0.6155 \pm 0.0069 $ & $ \S22.23 \pm 0.85 $  &\omit\ \vrule& $ 1.390\S \pm 0.019\S $ & $ \S\S2.00\S\S \pm 0.13\S\S $\cr
-$ 0.6293 \pm 0.0070 $ & $ \S24.23 \pm 0.90 $  &\omit\ \vrule& $ 1.428\S \pm 0.019\S $ & $ \S\S1.63\S\S \pm 0.11\S\S $\cr
-$ 0.6433 \pm 0.0071 $ & $ \S24.65 \pm 0.90 $  &\omit\ \vrule& $ 1.467\S \pm 0.020\S $ & $ \S\S1.47\S\S \pm 0.11\S\S $\cr
-$ 0.6572 \pm 0.0069 $ & $ \S27.43 \pm 0.97 $  &\omit\ \vrule& $ 1.508\S \pm 0.021\S $ & $ \S\S1.066\S \pm 0.086\S $\cr
-$ 0.6711 \pm 0.0070 $ & $ \S24.79 \pm 0.91 $  &\omit\ \vrule& $ 1.553\S \pm 0.025\S $ & $ \S\S0.841\S \pm 0.070\S $\cr
-$ 0.6853 \pm 0.0071 $ & $ \S25.11 \pm 0.91 $  &\omit\ \vrule& $ 1.604\S \pm 0.026\S $ & $ \S\S0.747\S \pm 0.065\S $\cr
-$ 0.6995 \pm 0.0072 $ & $ \S27.35 \pm 0.94 $  &\omit\ \vrule& $ 1.658\S \pm 0.028\S $ & $ \S\S0.557\S \pm 0.054\S $\cr
-$ 0.7136 \pm 0.0069 $ & $ \S26.52 \pm 0.94 $  &\omit\ \vrule& $ 1.715\S \pm 0.029\S $ & $ \S\S0.464\S \pm 0.047\S $\cr
-$ 0.7276 \pm 0.0071 $ & $ \S25.87 \pm 0.91 $  &\omit\ \vrule& $ 1.779\S \pm 0.035\S $ & $ \S\S0.369\S \pm 0.039\S $\cr
-$ 0.7420 \pm 0.0073 $ & $ \S25.05 \pm 0.88 $  &\omit\ \vrule& $ 1.853\S \pm 0.039\S $ & $ \S\S0.216\S \pm 0.028\S $\cr
-$ 0.7566 \pm 0.0072 $ & $ \S26.03 \pm 0.90 $  &\omit\ \vrule& $ 1.935\S \pm 0.042\S $ & $ \S\S0.192\S \pm 0.025\S $\cr
-$ 0.7712 \pm 0.0074 $ & $ \S24.07 \pm 0.85 $  &\omit\ \vrule& $ 2.027\S \pm 0.051\S $ & $ \S\S0.126\S \pm 0.018\S $\cr
-$ 0.7860 \pm 0.0074 $ & $ \S23.16 \pm 0.81 $  &\omit\ \vrule& $ 2.138\S \pm 0.060\S $ & $ \S\S0.059\S \pm 0.011\S $\cr
-$ 0.8008 \pm 0.0073 $ & $ \S21.34 \pm 0.78 $  &\omit\ \vrule& $ 2.282\S \pm 0.085\S $ & $ \S\S0.0412 \pm 0.0083 $\cr
-$ 0.8157 \pm 0.0076 $ & $ \S21.59 \pm 0.77 $  &\omit\ \vrule& $ 2.455\S \pm 0.088\S $ & $ \S\S0.0230 \pm 0.0055 $\cr\hline
+$\unt{GeV^2}$ & $\unt{\mu b/GeV^2}$ &\omit\ \vrule& $\unt{GeV^2}$ & $\unt{\mu b/GeV^2}$\cr
+\multispan2\hrulefill &\omit &\multispan2\hrulefill\cr
+$ 0.364 $ & $ 299.2\S \pm 6.9\S $ &\omit\ \vrule& $ 0.831 $ & $ \S18.93\S\S \pm 0.71\S $\cr
+$ 0.371 $ & $ 251.8\S \pm 5.8\S $ &\omit\ \vrule& $ 0.847 $ & $ \S18.32\S\S \pm 0.68\S $\cr
+$ 0.377 $ & $ 225.1\S \pm 5.1\S $ &\omit\ \vrule& $ 0.863 $ & $ \S16.33\S\S \pm 0.62\S $\cr
+$ 0.384 $ & $ 174.3\S \pm 4.2\S $ &\omit\ \vrule& $ 0.880 $ & $ \S16.42\S\S \pm 0.61\S $\cr
+$ 0.391 $ & $ 157.1\S \pm 3.8\S $ &\omit\ \vrule& $ 0.897 $ & $ \S16.95\S\S \pm 0.63\S $\cr
+$ 0.398 $ & $ 133.3\S \pm 3.2\S $ &\omit\ \vrule& $ 0.913 $ & $ \S14.14\S\S \pm 0.56\S $\cr
+$ 0.405 $ & $ 116.1\S \pm 2.9\S $ &\omit\ \vrule& $ 0.931 $ & $ \S14.05\S\S \pm 0.55\S $\cr
+$ 0.412 $ & $ \S92.6\S \pm 2.4\S $ &\omit\ \vrule& $ 0.948 $ & $ \S14.10\S\S \pm 0.56\S $\cr
+$ 0.420 $ & $ \S78.1\S \pm 2.1\S $ &\omit\ \vrule& $ 0.966 $ & $ \S11.91\S\S \pm 0.48\S $\cr
+$ 0.428 $ & $ \S63.2\S \pm 1.7\S $ &\omit\ \vrule& $ 0.985 $ & $ \S12.24\S\S \pm 0.48\S $\cr
+$ 0.436 $ & $ \S53.6\S \pm 1.5\S $ &\omit\ \vrule& $ 1.00\S $ & $ \S11.31\S\S \pm 0.46\S $\cr
+$ 0.445 $ & $ \S44.7\S \pm 1.3\S $ &\omit\ \vrule& $ 1.02\S $ & $ \S10.04\S\S \pm 0.43\S $\cr
+$ 0.454 $ & $ \S33.7\S \pm 1.1\S $ &\omit\ \vrule& $ 1.04\S $ & $ \S\S8.73\S\S \pm 0.39\S $\cr
+$ 0.464 $ & $ \S30.25 \pm 0.98 $ &\omit\ \vrule& $ 1.06\S $ & $ \S\S7.87\S\S \pm 0.36\S $\cr
+$ 0.474 $ & $ \S25.54 \pm 0.85 $ &\omit\ \vrule& $ 1.09\S $ & $ \S\S8.13\S\S \pm 0.36\S $\cr
+$ 0.485 $ & $ \S21.58 \pm 0.75 $ &\omit\ \vrule& $ 1.11\S $ & $ \S\S7.20\S\S \pm 0.34\S $\cr
+$ 0.496 $ & $ \S19.44 \pm 0.70 $ &\omit\ \vrule& $ 1.13\S $ & $ \S\S6.50\S\S \pm 0.31\S $\cr
+$ 0.507 $ & $ \S18.04 \pm 0.66 $ &\omit\ \vrule& $ 1.15\S $ & $ \S\S5.09\S\S \pm 0.26\S $\cr
+$ 0.519 $ & $ \S17.06 \pm 0.63 $ &\omit\ \vrule& $ 1.18\S $ & $ \S\S5.26\S\S \pm 0.26\S $\cr
+$ 0.534 $ & $ \S16.07 \pm 0.62 $ &\omit\ \vrule& $ 1.21\S $ & $ \S\S4.96\S\S \pm 0.25\S $\cr
+$ 0.547 $ & $ \S16.85 \pm 0.66 $ &\omit\ \vrule& $ 1.23\S $ & $ \S\S4.22\S\S \pm 0.22\S $\cr
+$ 0.560 $ & $ \S18.46 \pm 0.72 $ &\omit\ \vrule& $ 1.26\S $ & $ \S\S3.40\S\S \pm 0.19\S $\cr
+$ 0.574 $ & $ \S18.26 \pm 0.72 $ &\omit\ \vrule& $ 1.29\S $ & $ \S\S3.26\S\S \pm 0.18\S $\cr
+$ 0.588 $ & $ \S20.77 \pm 0.79 $ &\omit\ \vrule& $ 1.32\S $ & $ \S\S2.69\S\S \pm 0.16\S $\cr
+$ 0.602 $ & $ \S22.85 \pm 0.85 $ &\omit\ \vrule& $ 1.36\S $ & $ \S\S2.21\S\S \pm 0.14\S $\cr
+$ 0.615 $ & $ \S22.23 \pm 0.85 $ &\omit\ \vrule& $ 1.39\S $ & $ \S\S2.00\S\S \pm 0.13\S $\cr
+$ 0.629 $ & $ \S24.23 \pm 0.90 $ &\omit\ \vrule& $ 1.43\S $ & $ \S\S1.63\S\S \pm 0.11\S $\cr
+$ 0.643 $ & $ \S24.65 \pm 0.90 $ &\omit\ \vrule& $ 1.47\S $ & $ \S\S1.47\S\S \pm 0.11\S $\cr
+$ 0.657 $ & $ \S27.43 \pm 0.97 $ &\omit\ \vrule& $ 1.51\S $ & $ \S\S1.066\S \pm 0.086 $\cr
+$ 0.671 $ & $ \S24.79 \pm 0.91 $ &\omit\ \vrule& $ 1.55\S $ & $ \S\S0.841\S \pm 0.070 $\cr
+$ 0.685 $ & $ \S25.11 \pm 0.91 $ &\omit\ \vrule& $ 1.60\S $ & $ \S\S0.747\S \pm 0.065 $\cr
+$ 0.702 $ & $ \S27.35 \pm 0.94 $ &\omit\ \vrule& $ 1.66\S $ & $ \S\S0.557\S \pm 0.054 $\cr
+$ 0.714 $ & $ \S26.52 \pm 0.94 $ &\omit\ \vrule& $ 1.71\S $ & $ \S\S0.464\S \pm 0.047 $\cr
+$ 0.728 $ & $ \S25.87 \pm 0.91 $ &\omit\ \vrule& $ 1.78\S $ & $ \S\S0.369\S \pm 0.039 $\cr
+$ 0.742 $ & $ \S25.05 \pm 0.88 $ &\omit\ \vrule& $ 1.85\S $ & $ \S\S0.216\S \pm 0.028 $\cr
+$ 0.757 $ & $ \S26.03 \pm 0.90 $ &\omit\ \vrule& $ 1.93\S $ & $ \S\S0.192\S \pm 0.025 $\cr
+$ 0.771 $ & $ \S24.07 \pm 0.85 $ &\omit\ \vrule& $ 2.03\S $ & $ \S\S0.126\S \pm 0.018 $\cr
+$ 0.786 $ & $ \S23.16 \pm 0.81 $ &\omit\ \vrule& $ 2.13\S $ & $ \S\S0.059\S \pm 0.011 $\cr
+$ 0.801 $ & $ \S21.34 \pm 0.78 $ &\omit\ \vrule& $ 2.28\S $ & $ \S\S0.0412 \pm 0.008 $\cr
+$ 0.816 $ & $ \S21.59 \pm 0.77 $ &\omit\ \vrule& $ 2.45\S $ & $ \S\S0.0230 \pm 0.005 $\cr
+\multispan2\hrulefill &\omit &\multispan2\hrulefill\cr
 \end{tabular}
 \end{center}
 \end{table}
@@ -343,7 +360,7 @@ $ 0.8157 \pm 0.0076 $ & $ \S21.59 \pm 0.77 $  &\omit\ \vrule& $ 2.455\S \pm 0.08
 
 \subsection{Cross sections -- need better name}
 
-TODO: Comment on the reducing ration of extrapolated/observed $\sigma_{el}$
+TODO: Comment on the reducing ratio of extrapolated/observed $\sigma_{el}$
 
 
 TODO: Ref to Tab.~\ref{results}
@@ -432,6 +449,11 @@ Acknowledgements -- Insert here the text.
     %The TOTEM Experiment at the CERN Large Hadron Collider, JINST 3 S08007, 2008
 	\Name{Anelli G.~et al.~(TOTEM Collaboration)}
 	\REVIEW{JINST}{3}{2008}{S08007}
+
+\bibitem{lafferty94}
+ 	%``Where to stick your data points: The treatment of measurements within wide bins,''
+	\Name{Lafferty G.~D.~and Wyatt T.~R.}
+	\REVIEW{Nucl.\ Instrum.\ Meth.}{A 355}{1995}{541}
 
 %\bibitem{b.b}
 %  \Name{Author F. \and Author S.}
